@@ -1,3 +1,7 @@
+22/02/2025:
+	- Updated CIELAB decoding to fully handle 8 and 16 bit as well as floating point images
+
+
 20/02/2025:
 	- Re-ordered initializer lists in Watermark class constructor.
 	- Minor tweak to ICC embedding code to improve logging output.
